--- a/static/apis.html
+++ b/static/apis.html
@@ -41,7 +41,7 @@
     <div style="height:20px"></div>
 
     <button id="btn-send" class="btn btn-primary" ng-click="send()" disabled="disabled">Send</button>
-    <span class="label label-default" style="font-size: 100%;">{{currUrl}}</span>
+    <span class="label label-danger" style="font-size: 100%;">{{currUrl}}</span>
     <div style="height:5px"></div>
     <table class="table table-bordered">
       <tbody>
